--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Foundation</title>
+  <title>Rey Del Mar Clothing</title>
   <link rel="stylesheet" href="css/app.css" />
   <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
   <script src="bower_components/modernizr/modernizr.js"></script>
@@ -42,7 +42,7 @@
   <!-- <div class="row logo"> -->
 
     <img src="luxury.jpg" style="width: 100%;" alt="logo" />
-      <h1 class="text-center" id="reyDel">Rey Del Mar Apparel</h1></img>
+      <h1 class="text-center" id="reyDel">Rey Del Mar Clothing</h1></img>
       <img src="ReyDelMarLogo.png" alt="logo" style="margin: -25% 0 0 32%" />
   </div>
   <section class="main-content">
