--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </header>
   <!-- <div class="row logo"> -->
 
-    <img src="luxury.jpg" style="width: 100%;" alt="logo" />
+    <img src="luxury.jpg" style="width: 100%; margin-top: -10%" alt="logo" />
       <h1 class="text-center" id="reyDel">Rey Del Mar Clothing</h1></img>
       <img src="ReyDelMarLogo.png" alt="logo" style="margin: -25% 0 0 32%" />
   </div>
@@ -51,6 +51,10 @@
     <img src="blackT.jpg" alt="merchandise" style="height:250px; width:250; margin: 20px" />
     <img src="whitelogoT.jpg" alt="merchandise" style="height:250px; width:250; margin: 20px" />
     <img src="blacklogoT.jpg" alt="merchandise" style="height:250px; width:250; margin: 20px" />
+    <img src="blackVneckT.jpg" alt="merchandise" style="height:250px; width:250; margin: 20px" />
+    <img src="whiteVneckT.jpg" alt="merchandise" style="height:250px; width:250; margin: 20px" />
+    <img src="blackCap.jpg" alt="merchandise" style="height:250px; width:250; margin: 20px" />
+    <img src="whiteCap.jpg" alt="merchandise" style="height:150px; width:150; margin: 20px 20px 100px 20px;" />
 
   </section>
   <footer>
