--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <img src="luxury.jpg" style="width: 100%; margin-top: -10%" alt="logo" />
       <h1 class="text-center" id="reyDel">Rey Del Mar Clothing</h1></img>
-      <img src="ReyDelMarLogo.png" alt="logo" style="margin: -25% 0 0 32%" />
+      <img src="ReyDelMarLogo.png" alt="logo" id="reyLogo" style="margin: -25% 0 0 32%" />
   </div>
   <section class="main-content">
     <h2 style="margin-left: 20px; font-family: Libre Baskerville">Featured Items</h2>
